[tool.poetry]
name = "defillama"
version = "0.1.0"
description = "Python Api Wrapper for DefiLlama API"
authors = ["jp <plutakuba@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
